--- a/p8105_hw_sc5978.Rmd
+++ b/p8105_hw_sc5978.Rmd
@@ -5,7 +5,9 @@ date: "2023-10-03"
 output: github_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+# Problem 1
+Load the tidyverse library
+```{r setup, include = FALSE}
+library(tidyverse)
 ```
 
