--- a/p8105_hw_sc5978.Rmd
+++ b/p8105_hw_sc5978.Rmd
@@ -48,7 +48,10 @@ snp = read.csv("./fivethirtyeight_datasets/snp.csv") |>
 ```{r clean unemployment}
 ## Import and clean unemployment.csv datasets
 unemployment = read.csv("./fivethirtyeight_datasets/unemployment.csv") |>
-  janitor::clean_names()|>
-
+  rename(year = Year) |>
+  pivot_longer(
+    Jan:Dec,
+    names_to = "month", 
+    values_to = "unemployment")
 ```
 
