--- a/p8105_hw_sc5978.Rmd
+++ b/p8105_hw_sc5978.Rmd
@@ -137,12 +137,14 @@ Mr_trash <- mutate(Mr_trash, trash_wheel = "Mr. Trash Wheel")
 ## Convert year variable in Prof_trash from double to numerical
 
 ## Combine three datasets
-prob2 = 
-  left_join(Mr_trash, Prof_trash) |>
-  left_join(x = _, y = Gwynnda)
+prob2 = bind_rows(Mr_trash, Prof_trash, Gwynnda)
 
 str(prob2)
 ```
 
+Notice that there are some `NA` values in the `sports_balls` and `glass_bottles` variables, which indicate that the value of these variables is missing at those locations.
 
-```
+Let's talk about the prob2 datasets. The `Mr_trash` data has `r nrow(Mr_trash)` observations and `r ncol(Mr_trash)` variables and tells us about the weight of trash and specific amount in different types of trash in each dumpster for a given year from years `r Mr_trash |> pull(year) |> min()` to `r Mr_trash |> pull(year) |> max()`. It also tells us how many homes in Maryland can be powered with incinerating trash, the average homes can be powered by Mr. Trash Wheel was `r filter(prob2, trash_wheel == "Mr. Trash Wheel") |> pull(homes_powered) |> mean() |> round(0)`. The `Prof_trash` data has `r nrow(Prof_trash)` observations and `r ncol(Prof_trash)` variables, ranging from years `r Prof_trash |> pull(year) |> min()` to `r Prof_trash |> pull(year) |> max()`. The average homes can be powered by Professor Trash Wheel was `r filter(prob2, trash_wheel == "Professor Trash Wheel") |> pull(homes_powered) |> mean() |> round(0)`. The `Gwynnda` data has `r nrow(Gwynnda)` observations and `r ncol(Gwynnda)` variables ranging from years `r Gwynnda |> pull(year) |> min()` to `r Gwynnda |> pull(year) |> max()`. The average homes can be powered by Gwynnda Trash Wheel was `r filter(prob2, trash_wheel == "Gwynnda Trash Wheel") |> pull(homes_powered) |> mean() |> round(0)`. The average homes powered by three trash wheels was `r prob2 |> pull(homes_powered) |> mean() |> round(0)`.
+
+
+
