clean the baseline dataset

--- a/p8105_hw_sc5978.Rmd
+++ b/p8105_hw_sc5978.Rmd
@@ -12,6 +12,7 @@ library(tidyverse)
 library(readxl)
 library(dplyr)
 library(janitor)
+library(forcats)
 ```
 
 Import three datasets
@@ -147,9 +148,23 @@ Let's talk about the prob2 datasets. The `Mr_trash` data has `r nrow(Mr_trash)` 
 # Problem 3
 Import, clean, and tidy the dataset of baseline demographics so that sex and APOE4 carrier status are appropriate encoded (i.e. not numeric), and remove any participants who do not meet the stated inclusion criteria (i.e. no MCI at baseline).
 ```{r import and clean the baseline dataset}
-baseline = read.csv("./data_mci/MCI_baseline.csv", skip = 1) |>
+## import and clean the baseline dataset
+baseline = read.csv("./data_mci/MCI_baseline.csv", skip = 1, na.strings = ".") |>
   janitor::clean_names()|>
-  
+  mutate(
+    sex = 
+      case_match(
+        sex, 
+        1 ~ "male", 
+        0 ~ "female"),
+    sex = as.factor(sex),
+    apoe4 = 
+      case_match(
+        apoe4, 
+        1 ~ "APOE4 carrier", 
+        0 ~ "APOE4 non-carrier"),
+    sex = as.factor(apoe4)) |>
+  drop_na(age_at_onset)
 
 
 
