--- a/p8105_hw_sc5978.Rmd
+++ b/p8105_hw_sc5978.Rmd
@@ -163,7 +163,7 @@ baseline = read.csv("./data_mci/MCI_baseline.csv", skip = 1, na.strings = ".") |
         apoe4, 
         1 ~ "APOE4 carrier", 
         0 ~ "APOE4 non-carrier"),
-    sex = as.factor(apoe4)) |>
+    apoe4 = as.factor(apoe4)) |>
   drop_na(age_at_onset)
 
 
