Comment on the steps on the import process

--- a/p8105_hw_sc5978.Rmd
+++ b/p8105_hw_sc5978.Rmd
@@ -168,7 +168,7 @@ baseline = read.csv("./data_mci/MCI_baseline.csv", skip = 1, na.strings = ".") |
 ```
 
 Important steps in the import process:
-First, we need to import the baseline dataset. The first row is the label of each variables, so use `skip = 1` to skip the first row. We also need to set "." in the dataset as missing value with `na.strings = "."`. Then we use `janitor::clean_names()` to clean and standardize the column names. Sex and APOE4 carrier status should be categorical variables, so set sex = 1 as male, sex = 0 as female, apoe4 = 1 as APOE4 carrier, and apoe4 = 0 as APOE4 non-carrier with `case_match()`. Use `as.factor()` to change sex and apoe4 from a numeric to a factor variable. Finally, use `drop_na()` to remove any participants with no MCI at baseline.
+First, we need to import the baseline dataset by using `read.csv()`. The first row is the label of each variables, so use `skip = 1` to skip the first row. We also need to set "." in the dataset as missing value with `na.strings = "."`. Then we use `janitor::clean_names()` to clean and standardize the column names. Sex and APOE4 carrier status should be categorical variables, so set sex = 1 as male, sex = 0 as female, apoe4 = 1 as APOE4 carrier, and apoe4 = 0 as APOE4 non-carrier with `case_match()`. Use `as.factor()` to change `sex` and `apoe4` from a numeric to a factor variable. Finally, use `drop_na()` to remove any participants with no MCI at baseline.
 
 Relevant features of the dataset:
 In the baseline dataset, `r nrow(read.csv("./data_mci/MCI_baseline.csv"))` participants were recruited, and of these `r nrow(baseline)` develop MCI. The average baseline age is `r baseline |> pull(age_at_onset) |> mean()`. `r filter(baseline, sex == "female", apoe4 == "APOE4 carrier") |> count() / filter(baseline, sex == "female") |> count()` of women in the study are APOE4 carriers.
@@ -179,7 +179,7 @@ Import, clean, and tidy the dataset of longitudinally observed biomarker values.
 str(amyloid)
 rm(amyloid)
 ## import and clean the baseline dataset
-amyloid = read.csv("./data_mci/mci_amyloid.csv", skip = 1) |>
+amyloid = read.csv("./data_mci/mci_amyloid.csv", skip = 1, na.strings = "NA") |>
   janitor::clean_names()|>
   pivot_longer(
     baseline:time_8,
@@ -198,22 +198,9 @@ amyloid = read.csv("./data_mci/mci_amyloid.csv", skip = 1) |>
     time = as.factor(time),
     amyloid = as.numeric(amyloid)
   )
-  
-
-
-
-
-
-
-
-
-
-
-
-
 ```
-
-
+Comment on the steps on the import process:
+First, we need to import the baseline dataset by using `read.csv()`. The first row is the label of each variables, so use `skip = 1` to skip the first row. We also need to set "." in the dataset as missing value with `na.strings = "NA"`. Then we use `janitor::clean_names()` to clean and standardize the column names. The amyloid β 42/40 ratiois spread across five columns, which correspond to five observation times. We can fix this problem using `pivot_longer`. The original column names were informative but we probably don’t need to keep the `time_` prefix in each case. Then we match the character variables of each observations times to numeric values with `case_match()`. Use `as.factor()` to change `time` from a numeric to a factor variable. Use `as.numeric()` to change `amyloid` from a character to numeric variable.
 
 
 
