--- a/p8105_hw_sc5978.Rmd
+++ b/p8105_hw_sc5978.Rmd
@@ -203,7 +203,7 @@ amyloid = read.csv("./data_mci/mci_amyloid.csv", skip = 1) |>
 str(amyloid)
 ```
 Comment on the steps on the import process:
-First, we need to import the baseline dataset by using `read.csv()`. The first row is the label of each variables, so use `skip = 1` to skip the first row. We also need to set "." in the dataset as missing value with `na.strings = "NA"`. Then we use `janitor::clean_names()` to clean and standardize the column names. The amyloid β 42/40 ratiois spread across five columns, which correspond to five observation times. We can fix this problem using `pivot_longer`. The original column names were informative but we probably don’t need to keep the `time_` prefix in each case. Then we match the character variables of each observations times to numeric values with `case_match()`. Use `as.factor()` to change `time` from a numeric to a factor variable. Use `as.numeric()` to change `amyloid` from a character to numeric variable.
+First, we need to import the baseline dataset by using `read.csv()`. The first row is the label of each variables, so use `skip = 1` to skip the first row. We also need to set "." in the dataset as missing value with `na.strings = "NA"`. Then we use `janitor::clean_names()` to clean and standardize the column names. The amyloid β 42/40 ratiois spread across five columns, which correspond to five observation times. We can fix this problem using `pivot_longer`. The original column names were informative but we probably don’t need to keep the `time_` prefix in each case. Then we match the character variables of each observations times to numeric values with `case_match()`. Use `as.factor()` to change `time` from a numeric to a factor variable. Use `as.numeric()` to change `amyloid` from a character to numeric variable. Finally, we want to rename "study_id" as `id`, which is the same as `id` in the `baseline` dataset.
 
 Comment on the features of the dataset:
 The `amyloid` data has `r nrow(amyloid)` observations and `r ncol(amyloid)` variables and tells us about the amyloid β 42/40 ratio in different time (in years) elapsed since the study baseline. The average amyloid ratio at baseline is `r filter(amyloid, time == "0") |> pull(amyloid) |> mean(na.rm = TRUE)`. The average amyloid ratio at year 2 is `r filter(amyloid, time == "2") |> pull(amyloid) |> mean(na.rm = TRUE)`. The average amyloid ratio at year 4 is `r filter(amyloid, time == "4") |> pull(amyloid) |> mean(na.rm = TRUE)`. The average amyloid ratio at year 6 is `r filter(amyloid, time == "6") |> pull(amyloid) |> mean(na.rm = TRUE)`. The average amyloid ratio at year 8 is `r filter(amyloid, time == "8") |> pull(amyloid) |> mean(na.rm = TRUE)`. There is a decreasing trend of amyloid ratio through time.
@@ -211,13 +211,15 @@ The `amyloid` data has `r nrow(amyloid)` observations and `r ncol(amyloid)` vari
 
 Check whether some participants appear in only the baseline or amyloid datasets
 ```{r unique participants}
+## Participants id that is unique in baseline dataset
 participants_only_in_baseline <- anti_join(baseline, amyloid, by = "id")
-participants_only_in_amyloid <- anti_join(amyloid, baseline, by = "id")
+unique (participants_only_in_baseline$id)
 
-participants_only_in_baseline
-participants_only_in_amyloid
+## Participants id that is unique in amyloid dataset
+participants_only_in_amyloid <- anti_join(amyloid, baseline$id)
+unique (participants_only_in_amyloid$id)
 ```
-
+There are `r nrow(participants_only_in_baseline)`participants appear in only the baseline dataset. Their ids are `unique (participants_only_in_baseline$id)`, which means that there isn't follow-up data about their amyloid ratio. There are `r participants_only_in_amyloid |> pull(id) |> unique() |> length()` participants appear in only the amyloid dataset. Their ids are `unique (participants_only_in_amyloid$id)`, which means that they do not have basic demographic information that were measured at the study baseline or they do not meet the stated inclusion criteria (i.e. no MCI at baseline).
 
 
 
